# file2c

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README.md  THANKS  aclocal.m4  config.h  config.h.in  configure  configure.ac  genfile.c  genfile.h  main.c  settings.c
.deps/: genfile.Po  main.Po  settings.Po
build-aux/: ar-lib  config.guess  config.sub
build-aux/snippet/: .gitignore
doc/: Makefile.am  Makefile.in  file2c.info  file2c.texi
gnulib/: .gitignore  .gitignore~  Makefile  Makefile.am~  Makefile.in  gnulib.h  stdio.h  stdlib.h  unistd.h
gnulib/.deps/: error.Po  exitfail.Po  fclose.Po  fd-hook.Po  fflush.Po  fpurge.Po  freading.Po  fseek.Po  fseeko.Po  fseterr.Po  full-write.Po  isnanf.Po  isnanl.Po  open.Po  printf-args.Po  printf-frexp.Po  printf-frexpl.Po  printf-parse.Po  safe-write.Po  stat.Po  strerror-override.Po  strerror.Po  unistd.Po  vasnprintf.Po  xalloc-die.Po  xasprintf.Po  xmalloc.Po  xprintf.Po  xsize.Po  xvasprintf.Po
gnulib/sys/: stat.h
include/: Makefile.am  Makefile.in  headers.am  update_headers_am.sh
include/file2c/: genfile.h  main.h  settings.h
m4/: .gitignore  .gitignore~  gnulib-cache.m4  gnulib-cache.m4~  gnulib-comp.m4~
man/: Makefile.am  Makefile.in  file2c.1  file2c.3
src/: Makefile.am  Makefile.in  genfile.c  main.c  settings.c
src/.deps/: genfile.Po  main.Po  settings.Po
